untracked なファイルもリスト・検索できるように修正。